Bug 407161 - Only two items are highlighted when pasting them
Summary: Only two items are highlighted when pasting them
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.04.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: usability
: 413248 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-05-02 16:48 UTC by retired
Modified: 2023-04-20 15:17 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Problem caught on recording (230.30 KB, video/x-matroska)
2019-05-02 16:48 UTC, retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description retired 2019-05-02 16:48:16 UTC
Created attachment 119800 [details]
Problem caught on recording

SUMMARY

When copying or moving files only two files are highlighted on paste.

STEPS TO REPRODUCE
1. Copy or move file
2. Paste in new window

OBSERVED RESULT

Only first two items are highlighted

EXPECTED RESULT

All copied or moved files should be highlighted.


ADDITIONAL INFORMATION

Operating System: Arch Linux 
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.57.0
Qt Version: 5.12.3
Kernel Version: 5.0.10-zen1-1-zen
OS Type: 64-bit
Processors: 8 × Intel® Core™ i7-3720QM CPU @ 2.60GHz
Memory: 15,6 GiB
Comment 1 Nate Graham 2019-05-03 17:59:33 UTC
Can confirm. Only a subset of pasted items are selected in the destination window.
Comment 2 Patrick Silva 2021-04-14 15:07:50 UTC
related/dupe: bug 413248
Comment 3 Nate Graham 2021-04-14 15:51:38 UTC
*** Bug 413248 has been marked as a duplicate of this bug. ***
Comment 4 retired 2022-05-22 22:45:37 UTC
Just confirming that it's still reproducible.

Operating System: Arch Linux
KDE Plasma Version: 5.24.90
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.4
Kernel Version: 5.17.9-zen1-1-zen (64-bit)
Graphics Platform: X11
Comment 5 retired 2023-03-26 14:37:39 UTC
Still a thing.

KDE Plasma Version: 5.27.3
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8
Comment 6 Bug Janitor Service 2023-04-02 15:23:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/526
Comment 7 Méven Car 2023-04-20 15:17:32 UTC
Git commit 040e2afcfafaa8edd365d959760d4d0e7f3e48d3 by Méven Car.
Committed on 20/04/2023 at 15:17.
Pushed by meven into branch 'master'.

DolphinView: allow selectUrls to be considered for selection in more cases

 * when there is some selection already (some files were created previously)
 * when the model has not yet insert all the selectedUrls

Also
 * Rename DolphinView::slotCopyingDone to slotItemCreatedFromJob

M  +85   -33   src/views/dolphinview.cpp
M  +5    -2    src/views/dolphinview.h

https://invent.kde.org/system/dolphin/commit/040e2afcfafaa8edd365d959760d4d0e7f3e48d3