DolphinView: allow selectUrls to be considered for selection in more cases

* when there is some selection already (some files were created previously)
 * when the model has not yet insert all the selectedUrls

Also
 * Rename DolphinView::slotCopyingDone to slotItemCreatedFromJob

BUG: 407161